--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,20 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <section>
-      <h1>Example page title</h1>
-    </section>
+    <form id="search-form">
+      <input
+        type="text"
+        id="search-input"
+        name="search"
+        placeholder="Search images..."
+        required
+      />
+      <button type="submit">Search</button>
+    </form>
+
+    <div id="gallery"></div>
+
+    <div id="loader" style="display: none">Loading images,please wait...</div>
 
     <script type="module" src="./main.js"></script>
   </body>
