--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
       <button type="submit">Search</button>
     </form>
 
-    <div id="gallery"></div>
+    <div id="loader"></div>
 
-    <div id="loader" style="display: none">Loading images,please wait...</div>
+    <div id="gallery"></div>
 
     <script type="module" src="./main.js"></script>
   </body>
