--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       <button type="submit">Search</button>
     </form>
 
-    <div id="loader"></div>
+    <div id="loader" class="loader"></div>
 
     <div id="gallery"></div>
 
