--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         placeholder="Search images..."
         required
       />
-      <button type="submit">Search</button>
+      <button class="sub-btn" type="submit">Search</button>
     </form>
 
     <div id="loader" class="loader"></div>
